<resources>
    <string name="app_name">chatX</string>
    <string name="messenger">Messenger</string>
    <string name="your_email">Your email:</string>
    <string name="password">Password:</string>
    <string name="login">LOGIN</string>
    <string name="reset_password">Reset password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="password_reset">Password reset</string>
    <string name="sign_out">Sign Out</string>
    <string name="long_text">Violet is a genus of plants in the Violet family. About five hundred species are known, growing mainly in the Northern Hemisphere - in the mountains and in regions with a temperate climate.</string>
    <string name="enter_your_message">Enter your message...</string>
</resources>