<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="196sp"
        android:text="@string/messenger"
        android:textSize="48sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/holo_purple"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email"
        android:layout_marginTop="128sp"
        android:layout_marginHorizontal="48dp"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="4sp"
        android:layout_marginHorizontal="48dp"
        android:inputType="textPassword"
        />
    
    <Button
        android:id="@+id/buttonLogin"
        android:background="@drawable/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="8sp"
        android:text="@string/login"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/buttonResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@android:color/darker_gray"
            android:layout_marginStart="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4sp"
            />
        <TextView
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@android:color/darker_gray"
            android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>