<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_reset"
        android:textSize="48sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/holo_purple"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email"
        android:layout_marginTop="32sp"
        android:layout_marginHorizontal="48dp"
        android:inputType="textEmailAddress"
        />

    <Button
        android:id="@+id/buttonResetPassword"
        android:background="@drawable/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="8sp"
        android:text="@string/reset_password"
        />

</LinearLayout>